--- a/HY/yaml/azurepipelie.yaml
+++ b/HY/yaml/azurepipelie.yaml
@@ -16,6 +16,7 @@ steps:
       echo %LT_BUILD_NAME%   
       wget https://downloads.lambdatest.com/concierge/darwin/concierge 
       chmod u+x concierge
+      chmod u+x concierge
       
       ./concierge -u  meerap -k I9ADikrjXtd5i0yOXOtjmRQRSpcA5ng6PxIvHwEuWvNtQ8CTWd -i hyperexecuteStatic.yaml
 
