--- a/HY/yaml/azurepipelie.yaml
+++ b/HY/yaml/azurepipelie.yaml
@@ -20,7 +20,7 @@ steps:
       chmod u+x concierge
       chmod u+x concierge
       
-      ./concierge -u  meerap -k I9ADikrjXtd5i0yOXOtjmRQRSpcA5ng6PxIvHwEuWvNtQ8CTWd -i hyperexecuteStatic.yaml
+      ./concierge -u  meerap -k I9ADikrjXtd5i0yOXOtjmRQRSpcA5ng6PxIvHwEuWvNtQ8CTWd -i hyperexecuteStatic.yaml --verbose --download-artifacts --force-clean-artifacts
       
 
 
