Update azurepipelie.yaml for Azure Pipelines

--- a/HY/yaml/azurepipelie.yaml
+++ b/HY/yaml/azurepipelie.yaml
@@ -13,15 +13,13 @@ pool:
 steps:
 
   - script: |
-      echo %LT_BUILD_NAME%   
-      wget https://downloads.lambdatest.com/concierge/darwin/concierge 
+      echo %LT_BUILD_NAME%
+      wget https://downloads.lambdatest.com/hyperexecute/darwin/hyperexecute
       current_folder=$(basename `pwd`)
       mv $current_folder systemtests
-      chmod u+x concierge
-      chmod u+x concierge
-      
-      ./concierge -u  meerap -k I9ADikrjXtd5i0yOXOtjmRQRSpcA5ng6PxIvHwEuWvNtQ8CTWd -i hyperexecute.yaml --verbose --download-artifacts --force-clean-artifacts
-      
+      chmod u+x hyperexecute
+      chmod u+x hyperexecute
+      ./hyperexecute -u  meerap -k I9ADikrjXtd5i0yOXOtjmRQRSpcA5ng6PxIvHwEuWvNtQ8CTWd -i hyperexecute.yaml --verbose --download-artifacts --force-clean-artifacts
 
 
   - script: |
