Update azurepipelie.yaml for Azure Pipelines

--- a/HY/yaml/azurepipelie.yaml
+++ b/HY/yaml/azurepipelie.yaml
@@ -19,7 +19,7 @@ steps:
       mv $current_folder systemtests
       chmod u+x hyperexecute
       chmod u+x hyperexecute
-      ./hyperexecute -u  meerap -k I9ADikrjXtd5i0yOXOtjmRQRSpcA5ng6PxIvHwEuWvNtQ8CTWd -i main/.hypertest.yaml --verbose --download-artifacts --force-clean-artifacts
+      ./hyperexecute -u  meerap -k I9ADikrjXtd5i0yOXOtjmRQRSpcA5ng6PxIvHwEuWvNtQ8CTWd -i .hypertest.yaml --verbose --download-artifacts --force-clean-artifacts
 
 
   - script: |
